--- a/assessment/1/index.html
+++ b/assessment/1/index.html
@@ -34,17 +34,20 @@
         </div>
         <div class="circle">
           <div>
-            <img src="/assests/akar-icons_google-contained-fill.svg" alt="" />
+            <img src="./assests/akar-icons_google-contained-fill.svg" alt="" />
           </div>
         </div>
         <div class="circle">
           <div>
-            <img src="/assests/entypo-social_linkedin-with-circle.svg" alt="" />
+            <img
+              src="./assests/entypo-social_linkedin-with-circle.svg"
+              alt=""
+            />
           </div>
         </div>
         <div class="circle">
           <div>
-            <img src="/assests/entypo-social_twitter-with-circle.png" alt="" />
+            <img src="./assests/entypo-social_twitter-with-circle.png" alt="" />
           </div>
         </div>
       </div>
